@@ -1,0 +1,33 @@
+<div class="center"><ul class="mktree" id="diffRoot">
+<li whereLeft="L0_0" whereRight="R0_0"><span>&lt;?xml version="1.0" encoding="UTF-8"?&gt;</span></li>
+<li whereLeft="L1_0" whereRight="R1_0">&lt;section<span>&gt;</span><ul>
+<li whereLeft="L2_0" whereRight="R2_0">&lt;t<span>&gt;</span><ul>
+<li whereLeft="L2_0" whereRight="R2_0">
+<span>As this header element does not provide any trust, the header attribute can be in either a protected or unprotected header attribute. </span><span> </span><span class="right">
+<br>&lt;--
+<br>&#160;&#160;&#160;&#160;&#160;[Is&#160;the&#160;point&#160;being&#160;made&#160;here&#160;that&#160;the&#160;header&#160;is&#160;incidental&#160;to&#160;any&#160;trust&#160;processing&#160;that&#160;is&#160;done&#160;on&#160;the&#160;basis&#160;of&#160;the&#160;certificates&#160;in&#160;the&#160;bag?
+<br>&#160;&#160;&#160;&#160;&#160;If&#160;so,&#160;I&#160;suggest&#160;the&#160;following&#160;text:
+<br>&#160;&#160;&#160;&#160;&#160;"As&#160;the&#160;trust&#160;mechanisms&#160;in&#160;operation&#160;here&#160;do&#160;not&#160;depend&#160;on&#160;the&#160;header&#160;element&#160;itself,&#160;the&#160;header&#160;attribute&#160;MAY&#160;be&#160;either&#160;protected&#160;or&#160;unprotected.&#160;"]
+<br>&#160;&#160;&#160;&#160;--&gt;
+<br> </span>
+</li>
+<li whereLeft="L2_0" whereRight="R2_0"><span>&lt;/t&gt;</span></li>
+</ul>
+</li>
+<li whereLeft="L5_0" whereRight="R10_0">&lt;t<span>&gt;</span><ul>
+<li whereLeft="L5_0" whereRight="R10_0">
+<span class="right">
+<br>&lt;--
+<br>&#160;&#160;&#160;&#160;&#160;[Is&#160;the&#160;point&#160;being&#160;made&#160;here&#160;that&#160;the&#160;header&#160;is&#160;incidental&#160;to&#160;any&#160;trust&#160;processing&#160;that&#160;is&#160;done&#160;on&#160;the&#160;basis&#160;of&#160;the&#160;certificates&#160;in&#160;the&#160;bag?
+<br>&#160;&#160;&#160;&#160;&#160;If&#160;so,&#160;I&#160;suggest&#160;the&#160;following&#160;text:
+<br>&#160;&#160;&#160;&#160;&#160;"As&#160;the&#160;trust&#160;mechanisms&#160;in&#160;operation&#160;here&#160;do&#160;not&#160;depend&#160;on&#160;the&#160;header&#160;element&#160;itself,&#160;the&#160;header&#160;attribute&#160;MAY&#160;be&#160;either&#160;protected&#160;or&#160;unprotected.&#160;"]
+<br>&#160;&#160;&#160;&#160;--&gt;
+<br>  </span><span>As this header element does not provide any trust, the header attribute can be in either a protected or unprotected header attribute. </span>
+</li>
+<li whereLeft="L5_0" whereRight="R10_0"><span>&lt;/t&gt;</span></li>
+</ul>
+</li>
+<li whereLeft="L1_0" whereRight="R1_0"><span>&lt;/section&gt;</span></li>
+</ul>
+</li>
+</ul></div>
