@@ -1,0 +1,17 @@
+<div class="center"><ul class="mktree" id="diffRoot">
+<li whereLeft="L0_0" whereRight="R0_0"><span>&lt;?xml version="1.0" encoding="UTF-8"?&gt;</span></li>
+<li whereLeft="L1_0" whereRight="R1_0">&lt;section<span>&gt;</span><ul>
+<li whereLeft="L2_0" whereRight="R2_0">&lt;t<span>&gt;</span><ul>
+<li whereLeft="L2_0" whereRight="R2_0">
+<span class="left">Some of the constrained device situations are being used where an X.509 PKI is already installed. One of these situations is the 6TiSCH environment for enrollment of devices where the certificates are installed at </span><span class="right">In some of these cases, a constrained device is being deployed in the context of an existing X.509 PKI: for example, in the 6TiSCH environment,
+<br>&lt;--&#160;&lt;xref&#160;target="draft-richardson-enrollment-roadmap-00"/&gt;
+<br>--&gt;
+<br> describes a device enrollment solution that relies on the presence in </span><span> the </span><span class="left">factory. </span><span class="right">device of a factory-installed certificate. </span><span> The &lt;xref target="I-D.selander-ace-cose-ecdhe"/&gt; draft was also written with the idea that long term certificates could be used to provide for authentication of </span><span class="left">devices </span><span class="right">devices, </span><span> and uses them to establish session keys. A </span><span class="left">final </span><span class="right">third </span><span> scenario is the use of COSE as</span><span class="right"> the basis for </span><span> a</span><span class="right"> secure </span><span> messaging</span><span class="left"> application where </span><span class="right"> application. This scenario assumes the presence of </span><span> long term</span><span class="left"> existence of </span><span> keys </span><span class="left">can be used along with </span><span class="right">and </span><span> a central authentication authority.</span><span class="left"> The </span><span class="right"> Basing such an application on public key certificates allows it to make </span><span> use of </span><span class="left">certificates in this scenario allows for </span><span class="right">well established </span><span> key management </span><span class="left">to be used which is well understood. </span><span class="right">disciplines. </span><span> </span>
+</li>
+<li whereLeft="L2_0" whereRight="R2_0"><span>&lt;/t&gt;</span></li>
+</ul>
+</li>
+<li whereLeft="L1_0" whereRight="R1_0"><span>&lt;/section&gt;</span></li>
+</ul>
+</li>
+</ul></div>
