@@ -1,2 +1,2 @@
-xmldiff = 0.6.0
+xmldiff = 0.6.1
 rfctools_common = 0.6.0
